AUTOMAKE_OPTIONS = foreign

SUBDIRS = gst common

ACLOCAL_AMFLAGS = -I m4 -I common/m4

# Extra clean files so that maintainer-clean removes *everything*
MAINTAINERCLEANFILES = \
	aclocal.m4 compile config.guess config.sub \
	configure depcomp install-sh ltmain.sh     \
	Makefile.in missing config.h.in
