# Common options
option('package-name',
        type : 'string',
        value: 'GStreamer vspfilter plug-in source release',
        yield : true,
        description : 'package name to use in plugins')

option('package-origin',
        type : 'string',
        value : 'Unknown package origin',
        yield : true,
        description : 'package origin URL to use in plugins')
